--- a/2025/dune-project
+++ b/2025/dune-project
@@ -1,8 +1,17 @@
-(lang dune 3.19)
+(lang dune 3.20)
 
 (name aoc)
 
 (generate_opam_files true)
 
+(source
+ (github ratakor/aoc))
+
+(authors "Ratakor <ratakor@disroot.org>")
+
+(license ISC)
+
 (package
- (name aoc))
+ (name aoc)
+ (synopsis "Advent of Code 2025")
+ (depends ocaml ppx_expect))
